tests/paczka1/fuzzy1/45426033.err
Error in line 2: k9miRV0Tya S537 4,5
Error in line 1: dDRx4ITSS S406 64,6
Error in line 31: rr16 S406 62,9
